--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ captures
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+composeApp/src/desktopMain/kotlin/pl/edu/uj/tcs/rchess/db
