Fix missing icon and invalid paths in README

--- a/local/config.example.yml
+++ b/local/config.example.yml
@@ -1,7 +1,7 @@
 # This is an example configuration file
 #
 # Copy this file to:
-# - on Linux: ~/.config/rchess/config.yml
+# - on Linux: ~/.local/share/rchess/config.yml
 # - on Windows: %APPDATA%/rchess/config.yml
 # - on macOS: ~/Library/Application Support/rchess/config.yml
 #
