--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,9 @@ logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 kotlin-logging = { module = 'io.github.oshai:kotlin-logging-jvm', version.ref = "kotlin-logging" }
 ktor-client-core = { module = 'io.ktor:ktor-client-core', version.ref = 'ktor' }
 ktor-client-cio = { module = 'io.ktor:ktor-client-cio', version.ref = 'ktor' }
+ktor-server-core = { module = 'io.ktor:ktor-server-core', version.ref = 'ktor' }
+ktor-server-netty = { module = 'io.ktor:ktor-server-netty', version.ref = 'ktor' }
+ktor-server-html-builder = { module = 'io.ktor:ktor-server-html-builder', version.ref = 'ktor' }
 
 [plugins]
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
